--- a/src/components/itemListContainer.css
+++ b/src/components/itemListContainer.css
@@ -1,6 +1,8 @@
 .itemListContainer {
     width: 100%;
+    height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
