--- a/src/components/item.css
+++ b/src/components/item.css
@@ -1,5 +1,5 @@
 .card {
-    width: 20vw;
+    width: 15vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,4 +34,10 @@
 .cardButton:hover {
     background-color: rgb(174, 121, 199);
     color: white;
+}
+
+@media (max-width: 992px) {
+    .card {
+        width: 40vw;
+    }
 }
