--- a/src/components/Items/item.css
+++ b/src/components/Items/item.css
@@ -19,6 +19,10 @@
     text-align: center;
 }
 
+.cardTitle {
+    height: 6vh;
+}
+
 .cardButton {
     width: 100%;
     height: 5vh;
@@ -39,5 +43,11 @@
 @media (max-width: 992px) {
     .card {
         width: 40vw;
+    }
+}
+
+@media (max-width: 576px) {
+    .card {
+        width: 60vw;
     }
 }
