--- a/src/components/Items/itemDetail.css
+++ b/src/components/Items/itemDetail.css
@@ -15,9 +15,13 @@
     font-size: 2em;
 }
 
+.itemPrice {
+    font-size: 1.5em;
+}
+
 .detailButtons {
     width: 15vw;
-    margin-top: 10vh;
+    margin-top: 6vh;
 }
 
 .quantityButtons {
@@ -40,13 +44,14 @@
     cursor: pointer;
 }
 
-.addToCartButtonContainer {
+.addToCartButtonContainer, .backButtonContainer {
     height: 5vh;
     border: 2px solid rgb(174, 121, 199);
     border-radius: 5px;
+    margin: 1vh 0 1vh 0;
 }
 
-.addToCartBtn {
+.addToCartBtn, .backButton {
     width: 100%;
     height: 5vh;
     color: rgb(174, 121, 199);
@@ -55,4 +60,9 @@
     border: none;
     background: none;
     cursor: pointer;
+}
+
+.addToCartBtn:hover, .backButton:hover {
+    background-color: rgb(174, 121, 199);
+    color: white;
 }
