--- a/src/components/ItemCount/itemCount.css
+++ b/src/components/ItemCount/itemCount.css
@@ -22,17 +22,14 @@
     cursor: pointer;
 }
 
-.addToCartBtnContainer, .backButtonContainer {
+.addToCartBtnContainer {
+    width: 15vw;
     height: 5vh;
     border: 2px solid rgb(174, 121, 199);
     border-radius: 5px;
 }
 
-.backButtonContainer {
-    margin-top: 1vh;
-}
-
-.addToCartBtn, .backButton {
+.addToCartBtn {
     width: 100%;
     height: 5vh;
     color: rgb(174, 121, 199);
@@ -43,7 +40,7 @@
     cursor: pointer;
 }
 
-.addToCartBtn:hover, .quantityBtn:hover, .backButton:hover {
+.addToCartBtn:hover, .quantityBtn:hover {
     background-color: rgb(174, 121, 199);
     color: white;
 }
