--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -27,8 +27,10 @@
     width: 100%;
     height: 5vh;
     color: rgb(174, 121, 199);
-    font-size: medium;
-    font-weight: bold;
+    font-size: 1.5rem;
+    font-weight: 900;
+    text-align: center;
+    text-decoration: none;
     border: 2px solid rgb(174, 121, 199);
     border-radius: 5px;
     background: none;
