terminando primera entrega

--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -5,6 +5,8 @@
     justify-content: center;
     align-items: center;
     padding: 2vh;
+    text-decoration: none;
+    color: black;
 }
 
 .card:hover {
