--- a/src/components/ItemDetail/itemDetail.css
+++ b/src/components/ItemDetail/itemDetail.css
@@ -27,18 +27,19 @@
     margin-top: 1vh;
 }
 
+.backButtonContainer:hover {
+    background-color: rgb(174, 121, 199);
+    color: white;
+}
+
 .backButton {
     width: 100%;
     height: 5vh;
     color: rgb(174, 121, 199);
     font-size: medium;
     font-weight: bold;
+    text-decoration: none;
     border: none;
     background: none;
     cursor: pointer;
-}
-
-.backButton:hover {
-    background-color: rgb(174, 121, 199);
-    color: white;
 }
