--- a/src/components/Navbar/navBar.css
+++ b/src/components/Navbar/navBar.css
@@ -11,6 +11,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    text-decoration: none;
+    color: black;
 }
 
 .navBarLeft h1 {
@@ -26,6 +28,11 @@
     list-style: none;
     cursor: pointer;
     margin: 0 2vw 0 2vw;
+}
+
+.navBarCenter a {
+    color: black;
+    text-decoration: none;
 }
 
 .navBarCenter li:hover {
