--- a/src/components/ItemDetail/itemDetail.css
+++ b/src/components/ItemDetail/itemDetail.css
@@ -27,11 +27,6 @@
     margin-top: 1vh;
 }
 
-.backButtonContainer:hover {
-    background-color: rgb(174, 121, 199);
-    color: white;
-}
-
 .backButton {
     width: 100%;
     height: 5vh;
@@ -42,4 +37,9 @@
     border: none;
     background: none;
     cursor: pointer;
+}
+
+.backButton:hover, .goToCartButton:hover {
+    background-color: rgb(174, 121, 199);
+    color: white;
 }
