--- a/src/components/ItemDetail/itemDetail.css
+++ b/src/components/ItemDetail/itemDetail.css
@@ -19,7 +19,7 @@
     font-size: 1.5em;
 }
 
-.backButtonContainer {
+.backButtonContainer, .goToCartButtonContainer {
     width: 15vw;
     height: 5vh;
     border: 2px solid rgb(174, 121, 199);
@@ -27,7 +27,7 @@
     margin-top: 1vh;
 }
 
-.backButton {
+.backButton, .goToCartButton {
     width: 100%;
     height: 5vh;
     color: rgb(174, 121, 199);
