--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -5,6 +5,7 @@
 .cartProductContainer {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .cartProductImg {
@@ -16,7 +17,49 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: baseline;
-    margin-top: 5vh;
+    align-items: center;
     font-size: x-large;
+}
+
+.cartBtnsContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.emptyCartBtnContainer, .buyBtnContainer, .keepShoppingBtnContainer {
+    width: 15vw;
+    height: 5vh;
+    border: 2px solid rgb(174, 121, 199);
+    border-radius: 5px;
+    margin-top: 1vh;
+    margin-left: 7vw;
+}
+
+.removeProductBtnContainer {
+    width: 4vw;
+    height: 5vh;
+    border: 2px solid rgb(174, 121, 199);
+    border-radius: 5px;
+    margin-top: 1vh;
+    margin-left: 7vw;
+}
+
+.emptyCartBtn, .buyBtn, .removeProductBtn, .keepShoppingBtn {
+    width: 100%;
+    height: 5vh;
+    color: rgb(174, 121, 199);
+    font-size: medium;
+    font-weight: bold;
+    text-decoration: none;
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
+.emptyCartBtn:hover, .buyBtn:hover, .removeProductBtn:hover, .keepShoppingBtn:hover {
+    background-color: rgb(174, 121, 199);
+    color: white;
 }
