--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -29,13 +29,21 @@
     justify-content: space-around;
 }
 
-.emptyCartBtnContainer, .buyBtnContainer, .keepShoppingBtnContainer {
+.emptyCartBtnContainer, .buyBtnContainer {
     width: 15vw;
     height: 5vh;
     border: 2px solid rgb(174, 121, 199);
     border-radius: 5px;
     margin-top: 1vh;
     margin-left: 7vw;
+}
+
+.keepShoppingBtnContainer {
+    width: 15vw;
+    height: 5vh;
+    border: 2px solid rgb(174, 121, 199);
+    border-radius: 5px;
+    margin-top: 1vh;
 }
 
 .removeProductBtnContainer {
@@ -62,4 +70,12 @@
 .emptyCartBtn:hover, .buyBtn:hover, .removeProductBtn:hover, .keepShoppingBtn:hover {
     background-color: rgb(174, 121, 199);
     color: white;
+}
+
+.emptyCartMessage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
 }
