--- a/src/components/ItemDetail/itemDetail.css
+++ b/src/components/ItemDetail/itemDetail.css
@@ -20,27 +20,26 @@
     font-size: 1.5em;
 }
 
-.backButtonContainer, .goToCartButtonContainer {
+.backButtonContainer {
     width: 15vw;
     height: 5vh;
-    border: 2px solid rgb(174, 121, 199);
     border-radius: 5px;
-    margin-top: 1vh;
 }
 
-.backButton, .goToCartButton {
+.backButton {
     width: 100%;
     height: 5vh;
     color: rgb(174, 121, 199);
     font-size: medium;
     font-weight: bold;
-    text-decoration: none;
-    border: none;
+    border: 2px solid rgb(174, 121, 199);
+    border-radius: 5px;
     background: none;
     cursor: pointer;
+    margin-top: 1.5vh;
 }
 
-.backButton:hover, .goToCartButton:hover {
+.backButton:hover {
     background-color: rgb(174, 121, 199);
     color: white;
 }
